<resources>
    <string name="app_name">MutsaMarket</string>
    <string name="title_home">홈</string>
    <string name="title_chatting">채팅</string>
    <string name="title_make_content">글 쓰기</string>
    <string name="title_my_page">마이 페이지</string>
    <string name="post_detail_back">뒤로</string>
    <string name="post_detail_writer_text">판매자 이름</string>
    <string name="post_detail_isSale_text">판매 여부</string>
    <string name="post_detail_title_text">게시글 이름</string>
    <string name="post_detail_price_text">20,000</string>
    <string name="post_detail_content_text">이것은 상품 설명입니다.\n안녕하세요? 반갑습니다!</string>
    <string name="post_detail_isSale">판매 중</string>
    <string name="post_detail_doneSale">판매 완료</string>
    <string name="name">이름</string>
    <string name="birthdate">생년월일(YYYYMMDD)</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password2">비밀번호 확인</string>
    <string name="pw_check_text">6~15자 이상의 영문/숫자 조합으로 입력해주세요.</string>
    <string name="login_first_comment">처음이신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="welcome_comment">님, 안녕하세요!</string>
    <string name="logout">로그아웃</string>
    <string name="user_delete">회원 탈퇴</string>
    <string name="announcement">공지사항</string>
    <string name="FAQ">자주 묻는 질문</string>
    <string name="policies">약관 및 정책</string>
    <string name="isSale">판매 중</string>
    <string name="allPost">전체</string>
    <string name="isNotSale">판매 완료</string>
</resources>