<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hansung.ac.mutsamarket.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/postDetailDestination"
            app:destination="@+id/navigation_post_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chatting"
        android:name="hansung.ac.mutsamarket.ui.chatting.ChattingFragment"
        android:label="@string/title_chatting"
        tools:layout="@layout/fragment_chatting" />

    <fragment
        android:id="@+id/navigation_make_content"
        android:name="hansung.ac.mutsamarket.ui.make_content.MakeContentFragment"
        android:label="@string/title_make_content"
        tools:layout="@layout/fragment_make_content" />
    <fragment
        android:id="@+id/navigation_my_page"
        android:name="hansung.ac.mutsamarket.ui.my_page.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />

    <fragment
        android:id="@+id/navigation_post_detail"
        android:name="hansung.ac.mutsamarket.ui.home.PostDetailFragment"
        android:label="게시물 상세"
        tools:layout="@layout/fragment_post_detail"/>

</navigation>