<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_dark_blue"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/SignupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignupTitle">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="8dp"
            android:textColorHint="@color/edit_hint"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/subLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/loginButton">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:textColorHint="@color/edit_hint"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/checkButton"
                android:layout_width="70dp"
                android:layout_height="56dp"
                android:layout_gravity="center|end"
                android:contentDescription="중복 확인 버튼"
                android:padding="2dp"
                android:src="@drawable/check_button" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColorHint="@color/edit_hint"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passwordDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/pw_check_text"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/checkPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColorHint="@color/edit_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="90dp"
        android:background="#00FF0000"
        android:contentDescription="완료 버튼"
        android:src="@drawable/complete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>