<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_dark_blue"
    android:id="@+id/fragment_post_detail">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/postDetailBackImage"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_back_white"/>
        <TextView
            android:id="@+id/postDetailBackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_back"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/line"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/test_image" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/writer_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_my_page_white"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dp"
            />
        <TextView
            android:id="@+id/writer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_writer_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/writer_image"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/isSale_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="25dp"
            android:background="@color/is_sale"
            android:padding="4dp"
            android:text="@string/post_detail_isSale_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/title_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:text="@string/post_detail_title_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="25dp"
                android:background="@color/price_orange"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="3dp"
                android:text="@string/post_detail_price_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_price_layout"

            android:text="@string/post_detail_content_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />
    </RelativeLayout>

</LinearLayout>