<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_dark_blue"
    tools:context=".ui.make_content.MakeContentFragment">

    <LinearLayout
        android:id="@+id/myPageLinearLayout"
        android:layout_width="363dp"
        android:layout_height="235dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/subLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myName"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintEnd_toStartOf="@+id/welcomeText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:text="@string/welcome_comment"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/myBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myName" />

        <TextView
            android:id="@+id/myEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myBirth" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:background="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:letterSpacing="0"
        android:text="로그아웃"
        app:layout_constraintEnd_toStartOf="@+id/userDeleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPageLinearLayout" />

    <Button
        android:id="@+id/userDeleteButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:letterSpacing="0"
        android:text="@string/user_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPageLinearLayout" />

    <LinearLayout
        android:id="@+id/myPageBottomLinearLayout"
        android:layout_width="401dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:padding="8dp"
            android:text="@string/announcement"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:padding="8dp"
            android:text="@string/FAQ"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:padding="8dp"
            android:text="@string/policies"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>